# finishthestory

./: .gitignore  README.md  pyproject.toml
game/: __init__.py  util.py
game/static/: style.css
game/templates/: __init__.py  game.html  games.html  home.html  justplayers.html  players.html  round.html  story.html  template.html  votes.html  waitforvotes.html  winner.html
