[tool.poetry]
name = "finish-the-story"
version = "0.1.0"
description = ""
authors = ["Maxwell Joslyn <maxwelljoslyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
understory = "^0.0.165"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
